traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                      return true}
                             ^Snake:7: warning: enclosing method fonctionTest has result type Unit: return value discarded
                      return true}
                      ^Snake:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                      return true}
                             ^Snake:12: warning: enclosing method fonctionTest has result type Unit: return value discarded
                      return true}
                      ^Snake:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^Snake:17: warning: enclosing method run has result type Unit: return value discarded
  return false
  ^Snake:24: error: not found: value fonctionTest
    }while(!fonctionTest()) 
            ^